--- a/src/index.html
+++ b/src/index.html
@@ -10,16 +10,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body class="grid gap-10 bg-gray-50">
+  <body class="bg-gray-50 grid gap-10">
     <!-- Hero section -->
     <section class="grid h-auto md:grid-cols-2">
       <!-- class="bg-[url('/billeder/hero.jpg')]" -->
       <div>
         <img src="billeder/hero.jpg" alt="" />
       </div>
-      <div class="grid items-center justify-start bg-blue-100 p-10">
+      <div class="grid items-center justify-start bg-baggrund p-10">
         <div>
-          <h1 class="text-4xl lg:text-6xl">Københavnerbilleder</h1>
+          <h1 class="font-khand text-4xl text-overskrifter lg:text-6xl">
+            Københavnerbilleder
+          </h1>
           <p>- en guide til hipster foto af Sten Simons</p>
           <div>
             <button>Køb</button>
@@ -34,8 +36,10 @@
       <section class="grid items-center gap-6">
         <div class="grid gap-10 md:grid-cols-2">
           <div>
-            <h3 class="text-base font-bold lg:text-xl">Stamdata:</h3>
-            <ul class="grid gap-2 text-sm lg:text-base">
+            <h2 class="font-redhat text-base font-bold lg:text-xl">
+              Stamdata:
+            </h2>
+            <ul class="grid gap-2 font-redhat text-sm lg:text-base">
               <li>Titel: Københavnerbilleder - en guide til hipster foto</li>
               <li>Forfatter: Sten Simons</li>
               <li>Antal sider: 344</li>
@@ -45,10 +49,10 @@
             </ul>
           </div>
           <div>
-            <h3 class="text-base font-bold lg:text-xl">
+            <h2 class="font-redhat text-base font-bold lg:text-xl">
               Københavnerbilleder er de danske streetfotografers bibel:
-            </h3>
-            <p class="text-sm lg:text-base">
+            </h2>
+            <p class="font-redhat text-sm lg:text-base">
               Det er en fusion mellem et kunstværk og en lærebog. Bogen
               gennemgår alle væsentlige aspekter af streetfotografering fra
               grundlæggende teknik til kreative eksperimenter. Alt sammen
@@ -64,15 +68,15 @@
       </section>
       <!-- Sektion 2 - Kapitlerne -->
       <section class="grid gap-4">
-        <h2 class="text-xl font-bold">Kapitlerne</h2>
+        <h2 class="font-redhat text-xl font-bold">Kapitlerne</h2>
         <div>
-          <ul class="grid gap-10 md:grid-cols-2">
+          <ul class="grid gap-10 font-redhat md:grid-cols-2">
             <li>
               <div>
                 <h3 class="text-base font-bold lg:text-xl">
                   Kapitel 1 - Intro til street foto
                 </h3>
-                <p>
+                <p class="font-redhat">
                   Hvad er street foto? Det handler i bund og grund om at skyde
                   byens liv og byens geometri (urban geometry). I dette kapitel
                   får du en grundig intro til hvad street foto er og et overblik
@@ -86,7 +90,7 @@
                 <h3 class="text-base font-bold lg:text-xl">
                   Kapitel 2 - Om at skyde street
                 </h3>
-                <p>
+                <p class="font-redhat">
                   Vil du skyde street? Så er der ikke nogen vej udenom: Du skal
                   ud på gaderne og prøve det! I dette kapitel får du en teknisk
                   indføring i hvordan du bedst skyder street. Uanset om du er
@@ -100,7 +104,7 @@
                 <h3 class="text-base font-bold lg:text-xl">
                   Kapitel 3 - Om at finde det rette motiv
                 </h3>
-                <p>
+                <p class="font-redhat">
                   Indimellem er man heldig, andre gange kommer man hjem helt
                   uden gode motiver. Med et par tips og tricks til at finde de
                   rette motiver, stiger chancen gevaldigt for at fange de gode
@@ -113,7 +117,7 @@
                 <h3 class="text-base font-bold lg:text-xl">
                   Kapitel 4 - Digital street foto
                 </h3>
-                <p>
+                <p class="font-redhat">
                   De fleste af os skyder oftest digitalt fordi det er billigere
                   og nemmere. Og nogen teknikker og fremgangsmåder egner sig kun
                   til digital street foto. I dette kapitel får du en række tips
@@ -126,7 +130,7 @@
                 <h3 class="text-base font-bold lg:text-xl">
                   Kapitel 5 - Analog street foto
                 </h3>
-                <p>
+                <p class="font-redhat">
                   Analog er sejt fordi det er mere “ægte,” dyrere og mere
                   besværligt end digital. Det signalerer entusiasme. Nogle
                   teknikker og fremgangsmåder egner sig bedst til analog street
@@ -140,7 +144,7 @@
                 <h3 class="text-base font-bold lg:text-xl">
                   Kapitel 6 - Om at skyde sort/hvid
                 </h3>
-                <p>
+                <p class="font-redhat">
                   Alle street-fotografer skyder sort/hvid nu og da. Nogen altid.
                   Hvorfor? Hvad er der specielt ved sort/hvid fotografering, og
                   hvad adskiller sort/hvid fra farvefotografering? Her får du en
@@ -153,7 +157,7 @@
                 <h3 class="text-base font-bold lg:text-xl">
                   Kapitel 7 - Kreative teknikker
                 </h3>
-                <p>
+                <p class="font-redhat">
                   Dobbelteksponeringer, ICM (intentional camera moves), smadrede
                   objektiver, gamle filmruller og alle mulige andre, spændende
                   kreative teknikker kan løfte dine fotografier fra at være
@@ -168,7 +172,7 @@
                 <h3 class="text-base font-bold lg:text-xl">
                   Kapitel 8 - Kom helt tæt på!
                 </h3>
-                <p>
+                <p class="font-redhat">
                   Street foto handler om at fotografere livet på gaden - men tør
                   du at gå helt tæt på fremmede mennesker og knipse løs? Du kan
                   lige så godt øve dig, for det er det der vil gøre dig til en
@@ -182,9 +186,9 @@
 
       <!-- Sektion 3 - Pressen siger -->
       <section class="grid gap-4">
-        <h2 class="text-xl font-bold">Pressen siger</h2>
+        <h2 class="font-redhat text-xl font-bold">Pressen siger</h2>
         <div class="grid gap-10 md:grid-cols-3">
-          <div class="rounded bg-blue-100 p-2">
+          <div class="bg-blue-100 rounded p-2">
             <figure class="flex">
               <svg
                 class="text-yellow-400"
@@ -249,15 +253,15 @@
                 />
               </svg>
             </figure>
-            <p>
+            <p class="font-redhat">
               Københavnerbilleder er en grundig introduktion til at skyde
               billeder med retro-kant. Hvad enten du er har arbejdet med foto
               siden 135-filmen kom på markedet, du kun har skudt digitalt eller
               er helt nybegynder, er der masser af tips og tricks i bogen.
             </p>
-            <p>- Hanne Hovgaard, Berlingeren</p>
+            <p class="font-redhat font-bold">- Hanne Hovgaard, Berlingeren</p>
           </div>
-          <div class="rounded bg-blue-100 p-2">
+          <div class="bg-blue-100 rounded p-2">
             <figure class="flex">
               <svg
                 class="text-yellow-400"
@@ -312,13 +316,15 @@
                 />
               </svg>
             </figure>
-            <p>
+            <p class="font-redhat">
               Teksten er underholdende, og billederne er sku’ flotte. Hvad mere
               skal man sige om en fotobog?
             </p>
-            <p>- Kim Kloggaard, Fotojournalen.dk</p>
+            <p class="font-redhat font-bold">
+              - Kim Kloggaard, Fotojournalen.dk
+            </p>
           </div>
-          <div class="rounded bg-blue-100 p-2">
+          <div class="bg-blue-100 rounded p-2">
             <figure class="flex">
               <svg
                 class="text-yellow-400"
@@ -387,13 +393,13 @@
                 />
               </svg>
             </figure>
-            <p>
+            <p class="font-redhat">
               Sten Simons kan det der - og han bliver bedre og bedre. Stens
               tredje fotobog er klart den bedste - her er han for alvor i sit
               rette element, meget bedre end “studiefotografering som
               begyndere.” Tillykke - godt arbejde.
             </p>
-            <p>- Volmer Hansen, Lukkertiden.dk</p>
+            <p class="font-redhat font-bold">- Volmer Hansen, Lukkertiden.dk</p>
           </div>
         </div>
       </section>
@@ -413,13 +419,13 @@
 
       <!-- Sektion 5 - forfatteren -->
       <section class="grid gap-4">
-        <h2 class="text-xl font-bold">Forfatteren</h2>
+        <h2 class="font-redhat text-xl font-bold">Forfatteren</h2>
         <div class="grid gap-10 md:grid-cols-2">
           <div>
             <img src="billeder/sten_simons.jpg" alt="" />
           </div>
           <div>
-            <p>
+            <p class="font-redhat">
               Sten Simons har en lang foto-karriere bag sig. Det hele startede i
               00’erne, da han gik rundt i Pisserenden for at fotografere
               ungdommens forfald. Det ledte til en række udstillinger, og blev
@@ -430,7 +436,7 @@
               “Amagerkaneren.” Sideløbende begyndte han at undervise i foto, og
               har skrevet et utal af bøger, herunder bestsellerne:
             </p>
-            <p class="italic">
+            <p class="font-redhat italic">
               Scener fra S-toget, Brun mad - en visuel odysse, og lærebogen
               Fotografering for evnesvage.
             </p>
@@ -440,9 +446,11 @@
 
       <!-- Sektion 6 - Køb københavnerbilleder nu -->
       <section class="grid gap-4">
-        <h2 class="text-6xl font-bold">Køb københavnerbilleder nu</h2>
+        <h2 class="font-redhat text-6xl font-bold">
+          Køb københavnerbilleder nu
+        </h2>
         <div>
-          <button>Køb</button>
+          <button class="font-redhat">Køb</button>
         </div>
       </section>
     </div>
