--- a/src/index.html
+++ b/src/index.html
@@ -188,8 +188,8 @@
       <section class="grid gap-4">
         <h2 class="font-redhat text-xl font-bold">Pressen siger</h2>
         <div class="grid gap-10 md:grid-cols-3">
-          <div class="bg-blue-100 rounded p-2">
-            <figure class="flex">
+          <div class="bg-blue-100 grid items-center rounded p-2">
+            <figure class="grid md:grid-cols-6">
               <svg
                 class="text-yellow-400"
                 width="32"
@@ -261,8 +261,8 @@
             </p>
             <p class="font-redhat font-bold">- Hanne Hovgaard, Berlingeren</p>
           </div>
-          <div class="bg-blue-100 rounded p-2">
-            <figure class="flex">
+          <div class="bg-blue-100 grid items-center rounded p-2">
+            <figure class="grid md:grid-cols-5">
               <svg
                 class="text-yellow-400"
                 width="32"
@@ -324,8 +324,8 @@
               - Kim Kloggaard, Fotojournalen.dk
             </p>
           </div>
-          <div class="bg-blue-100 rounded p-2">
-            <figure class="flex">
+          <div class="bg-blue-100 grid items-center rounded p-2">
+            <figure class="grid md:grid-cols-6">
               <svg
                 class="text-yellow-400"
                 width="32"
