light/darkmodeknapper tilføjet

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <title>Vite App</title>
   </head>
   <body class="bg-bg dark:bg-darksort">
-    <!-- <header class="bg-baggrund p-5 dark:bg-darksort">
+    <header class="bg-baggrund p-5 dark:bg-darksort">
       <button
         id="light"
         class="rounded-md bg-blaa p-1 px-5 font-khand text-lg hover:bg-overskrifter dark:hover:bg-darkoverskrift md:text-2xl"
@@ -24,7 +24,7 @@
       >
         Dark
       </button>
-    </header> -->
+    </header>
     <div class="grid gap-10 bg-bg dark:bg-darksort">
       <!-- Hero section -->
       <section class="grid h-auto md:grid-cols-2">
